<resources>
    <string name="app_name">Retobici</string>

    <string name="noTokenDialogTitle">Error: no mapbox access token</string>
    <string name="noTokenDialogBody">Please put your mapbox access token to res/values/mapbox_access_token.xml</string>

    <string name="title_multiple_way_points">Build a multiple waypoints route</string>
    <string name="description_multiple_way_points">Build a route using different types of waypoints: regular, silent, and named.</string>
    <string name="reset_route_button">Reset the route</string>
    <string name="waypoint_type_regular">Regular</string>
    <string name="waypoint_type_named">Named</string>
    <string name="waypoint_type_silent">Silent</string>

    <string name="title_voice">Play voice instructions for a route</string>
    <string name="description_voice">Use the example to play voice instructions using Speech API and Voice Instruction Player.</string>

    <string name="title_turn_by_turn">Add a complete turn-by-turn experience</string>
    <string name="description_turn_by_turn">Render a complete turn-by-turn experience using all relevant Navigation SDK APIs and pre-built UI components.</string>

    <string name="title_trip_progress">Render trip progress information</string>
    <string name="description_trip_progress">Draw trip progress information using the Trip Progress API and MapboxTripProgressView.</string>

    <string name="title_speed_limit">Render speed limit for a route</string>
    <string name="description_speed_limit">Render the speed limit of the current road using the Speed Limit API and MapboxSpeedLimitView.</string>

    <string name="title_route">Draw route lines on a map</string>
    <string name="description_route">Draw route lines on a map using the route line and route arrow APIs and the related MapboxRouteLineView and MapboxRouteArrowView.</string>

    <string name="title_maneuver">Render maneuver instructions for a route</string>
    <string name="description_maneuver">Draw maneuver instructions using the Maneuver API and MapboxManeuverView.</string>

    <string name="title_current_location">Render current location on a map</string>
    <string name="description_current_location">Use NavigationLocationProvider to show a device\'s current location as a puck on a map.</string>

    <string name="fetch_a_route_message">Route was fetched successfully</string>
    <string name="fetch_a_route_cancel_message">Route request was canceled</string>
    <string name="fetch_a_route_error_message">Route request returned error</string>
    <string name="title_fetch_route">Fetch routes between an origin and destination</string>
    <string name="description_fetch_route">Fetch routes by specifying two coordinates in RouteOptions and passing those options to MapboxNavigation\'s requestRoutes method.</string>

    <string name="title_camera_transitions">Use camera to frame the map</string>
    <string name="description_camera_transitions">Use NavigationCamera to show various map camera transitions using live location and routing data.</string>

    <string name="title_building_extrusions">Render building extrusion on arrival</string>
    <string name="description_building_extrusions">Use the example to render building extrusions on arrival using building API and MapboxBuildingView.</string>

    <string name="title_building_extrusions_custom_arrival">Render building extrusion based on custom arrival criteria.</string>
    <string name="description_building_extrusions_custom_arrival">Use the example to render building extrusions on arrival using building API and MapboxBuildingView.</string>
    <string name="content_description_close">Close tab</string>
    <string name="page_title">RetoBici</string>
    <string name="more">mas</string>
    <string name="content_description_more">Mas opciones</string>
    <string name="edit">editar</string>
    <string name="content_description_search">Editar contenido</string>
    <string name="favorite">favorito</string>
    <string name="content_description_favorite">Sitio Favorito</string>
    <string name="search">buscar</string>
    <string name="drawer_item_rutas">Historial Rutas</string>
    <string name="drawer_item_recompensas">Recompensas</string>
    <string name="drawer_item_ajustes">Ajustes</string>
    <string name="header_title">Jorge Plaza</string>
    <string name="header_text">Puntos: 1000</string>
    <string name="nav_header_desc">profile_image</string>
    <string name="title_activity_testactivityremove">Testactivityremove</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="bottom_sheet">Panel inferior</string>
    <string name="qr_content_desc">QR scan button</string>
    <string name="pedal_bike_descriptor">Bicicleta a pedales</string>
    <string name="pedal_bike">Bicicleta a pedales</string>
    <string name="electric_bike">Bicicleta eléctrica</string>
    <string name="bike_stop_available">Paradas libres</string>
    <string name="default_stop_title">default name</string>
    <string name="count_pedal_bike">4</string>
    <string name="count_electric_bike">1</string>
    <string name="count_bike_stop">7</string>
    <string name="bottom_drawer_slash">—</string>
    <string name="km_away_from_stop">2,2 km</string>
    <string name="default_stop_distance">2,2km</string>
    <string name="how_to_approach">Como llegar</string>
    <string name="recenter_user_location_button">"Recentrar mapa en usuario "</string>
    <string name="start_route">Escanea el QR para desbloquear</string>
    <string name="ongoing_route">Ruta en Curso</string>
    <string name="end_route">Finalizar Ruta</string>
    <string name="default_time">00:00</string>
    <string name="default_battery_level" />
    <string name="fab_content_desc">finish_route</string>
    <string name="default_bike_id">0001</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="route_completed">Ruta Completada</string>
    <string name="check">check OK</string>
    <string name="default_distance">500 metros</string>
    <string name="default_duration">10 min</string>
    <string name="default_points">100 puntos</string>
    <string name="ok">OK</string>
    <string name="finish">Finalizar</string>
    <string name="reward_description_media">reward image</string>
    <string name="content_description_media">rewardimage</string>
    <string name="default_reward_title">Reward title default</string>
    <string name="reward_obtained">Recompensa ya obtenida</string>
    <string name="obtain">Obtener</string>
    <string name="unlock_bike">Desbloquear Bici</string>
    <string name="route_summary">Resumen de la Ruta</string>
    <string name="rewards">Recompensas</string>
    <string name="reserv_bike">Seleccione para rservar</string>
    <string name="reserve_bike">Seleccione para Reservar</string>
    <string name="bike_status">Estado de la bici</string>
    <string name="default_stop_id">1</string>
    <string name="scan_qr">Escanea el QR para bloquear</string>
    <string name="battery_content">Batería: </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Email invalido</string>
    <string name="invalid_password">La contraseña debe tener como mínimo 6 carácteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="login">Iniciar Sesión</string>
    <string name="User_not_loggedin">No hay sesión de usuario activa</string>
    <string name="user_not_logged_desc">Inicie sesión para poder acceder a todas las funcionalidades</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="redeemed">Obtenidas</string>
    <string name="available_rewards">Disponibles</string>
    <string name="available_points">Puntos disponibles:</string>
    <string name="scan_qr_fragment">QR Scaner</string>
    <string name="bike_id_label">Indentificador:</string>
    <string name="_1000">1000</string>

</resources>
