<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_rutas"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/drawer_item_rutas"
            android:checked="true" />
        <item
            android:id="@+id/drawer_item_recompensas"
            android:icon="@drawable/ic_baseline_card_giftcard_24"
            android:title="@string/drawer_item_recompensas" />
        <item
            android:id="@+id/drawer_item_ajustes"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/drawer_item_ajustes" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_bottom_sheet"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/search" />
    </group>
</menu>