<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/route_status"
        android:icon="@drawable/ic_baseline_pedal_bike_green_24"
        android:title="@string/bike_status"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/bike_status"
        android:icon="@drawable/ic_baseline_pedal_bike_orange_24"
        android:title="@string/bike_status"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />

</menu>