<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_rutas"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/drawer_item_rutas"
            android:checked="true" />
        <item
            android:id="@+id/drawer_item_recompensas"
            android:icon="@drawable/ic_baseline_card_giftcard_24"
            android:title="@string/drawer_item_recompensas" />
        <item
            android:id="@+id/drawer_item_ajustes"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/drawer_item_ajustes" />
    </group>
</menu>