<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.uva.retobici.frontend.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_qr_scan"
            app:destination="@id/qr_scan" />
        <action
            android:id="@+id/action_nav_home_to_routeSummaryFragment"
            app:destination="@id/routeSummaryFragment" />
        <action
            android:id="@+id/action_nav_home_to_rewardsFragment"
            app:destination="@id/nav_rewards" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.uva.retobici.frontend.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_scan_qr" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.uva.retobici.frontend.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/qr_scan"
        android:name="es.uva.retobici.frontend.ui.QrScanFragment"
        android:label="@string/scan_qr_fragment"
        tools:layout="@layout/fragment_scan_qr">
        <action
            android:id="@+id/action_qr_scan_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_qr_scan_to_routeSummaryFragment"
            app:destination="@id/routeSummaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/routeSummaryFragment"
        android:name="es.uva.retobici.frontend.ui.RouteSummaryFragment"
        android:label="@string/route_summary"
        tools:layout="@layout/fragment_route_summary" >
        <action
            android:id="@+id/action_routeSummaryFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_rewards"
        android:label="@string/rewards"
        android:name="es.uva.retobici.frontend.ui.RewardsFragment"
        tools:layout="@layout/fragment_rewards" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="es.uva.retobici.frontend.ui.ui.login.LoginFragment"
        android:label="Inicio de Sesión"
        tools:layout="@layout/fragment_login" />

</navigation>