<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/persistent_bottom_sheet_stop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/bottom_drawer_slash"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/stop_name_"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/stop_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="top|center_horizontal"
            android:text="@string/default_stop_id"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="top|center_horizontal"
            android:text=" - "
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/stop_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="top|center_horizontal"
            android:text="@string/default_stop_title"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/stop_distance"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="top|center_horizontal"
        android:text="@string/default_stop_distance"
        android:textAlignment="center"
        android:textSize="12sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/pedal_bike_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pedal_bike_descriptor"
            android:src="@drawable/ic_baseline_pedal_bike_24"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/text_pedal_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|top"
            android:text="@string/pedal_bike"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_pedal_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|top"
            android:text="@string/count_pedal_bike"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="25dp"/>
    <LinearLayout
        android:id="@+id/electric_bike_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_electric_bike_24"
            android:contentDescription="@string/pedal_bike_descriptor"
            android:layout_marginStart="8dp"
            />
        <TextView
            android:id="@+id/textViewElectricBike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|top"
            android:text="@string/electric_bike"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/count_electric_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|top"
            android:text="@string/count_electric_bike"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorError"/>
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="25dp"/>
    <LinearLayout
        android:id="@+id/bike_stop_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_pin_drop_24"
            android:contentDescription="@string/pedal_bike_descriptor"
            android:layout_marginStart="8dp"
            />
        <TextView
            android:id="@+id/textViewBikeStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|top"
            android:text="@string/bike_stop_available"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/count_bike_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|top"
            android:text="@string/count_bike_stop"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/reserve_bike_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/reserve_bike"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:enabled="false"
            />

        <Button
            android:id="@+id/scan_qr_on_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/scan_qr"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>